# planning_baxter

./: .gitignore  Gazebo_central_control.py  Gazebo_sim  MCTS.py  Makefile  Node.py  PHIM.py  README.md  baxter.sh  central_control.py  config (copy).txt  config.txt  connect_baxter  constants.py  enable.sh  grasp.py  install_deps.sh  look.py  patch.sh  pipeline  pipeline_Gazebo  pipeline_stick  plan.txt  planning_real.launch  source_me  source_me.arch  stats_PHIA.txt  test.launch  test.py  test.sh
Perception/: frame_checking
Perception/pose_estimation_v1_for_letters/: ICP.py  adjust_image.py  collect_data.py  command.txt  constants.py  error_analysis.py  get_poses.py  get_poses_1112.py  get_tag_poses.py  get_tags.py  object_labeling.py  range-detector.py  utils.py
Persistent_Homology/: GRTC_Heur.py  OOA.py  PHIA.py  PHIM.py  PHIS.py  read_config.py  spawn_config.py  spawn_config_old.py  spawn_objects.py  test.py
Persistent_Homology/examples/: config_lenghty.txt  data.txt  s1.txt
Persistent_Homology/src/: MCTS.py  PH_planning.py  Stick_Simulation.py
Persistent_Homology/util/: Connected_Comp.py  MCTS.py  Node.py  PH_planning.py  Stick_Simulation.py  Tree.py
models/: format.sh  mesh_simplify.py  simplify_collision_mesh.py
models/001_chips_can_textured/: model.sdf  textured.col.dae
models/002_master_chef_can_textured/: model.sdf
models/003_cracker_box_textured/: model.sdf
models/004_sugar_box_textured/: model.sdf
models/005_tomato_soup_can_textured/: model.sdf
models/006_mustard_bottle_textured/: model.sdf  textured.col.dae
models/007_tuna_fish_can_textured/: model.sdf
models/008_pudding_box_textured/: model.sdf
models/009_gelatin_box_textured/: model.sdf
models/010_potted_meat_can_textured/: model.sdf  textured.col.dae
models/011_banana_textured/: model.sdf  textured.col.dae
models/012_strawberry_textured/: model.sdf  textured.col.dae
models/013_apple_textured/: model.sdf  textured.col.dae
models/014_lemon_textured/: model.sdf  textured.col.dae
models/015_peach_textured/: model.sdf  textured.col.dae
models/016_pear_textured/: model.sdf  textured.col.dae
models/017_orange_textured/: model.sdf  textured.col.dae
models/018_plum_textured/: model.sdf  textured.col.dae
models/019_pitcher_base_textured/: model.sdf  textured.col.dae
models/021_bleach_cleanser_textured/: model.sdf  textured.col.dae
models/022_windex_bottle_textured/: model.sdf  textured.col.dae
models/024_bowl_textured/: model.sdf  textured.col.dae
models/025_mug_textured/: model.sdf  textured.col.dae
models/026_sponge_textured/: model.sdf  textured.col.dae
models/029_plate_textured/: model.sdf  textured.col.dae
models/030_fork_textured/: model.sdf  textured.col.dae
models/031_spoon_textured/: model.sdf  textured.col.dae
models/032_knife_textured/: model.sdf  textured.col.dae
models/033_spatula_textured/: model.sdf  textured.col.dae
models/035_power_drill_textured/: model.sdf  textured.col.dae
models/036_wood_block_textured/: model.sdf
models/037_scissors_textured/: model.sdf  textured.col.dae
models/038_padlock_textured/: model.sdf  textured.col.dae
real_robot_commands/: 1_open_moveit  get_arm_position  move_arm
scenes/: baxter-with-grippers.ttt  baxter.ttt  baxterTeleopFromKeyboard.ttt  baxter_sofar.ttt  table.world  test.scene
simulation_commands/: 1_1_open_gazebo_stick  1_open_gazebo  2_enable_robot  3_open_moveit  4_perception  PHIA_planning  position_the_arm  spawn_objects
src/baxter_moveit/baxter_moveit/: CMakeLists.txt  package.xml
src/baxter_moveit/baxter_moveit/launch/: enable.launch  execution.launch  execution1.launch  execution_stick.launch  planning_real.launch  planning_sim.launch  robot.launch
src/baxter_moveit/baxter_moveit/urdf/: baxter.urdf.xacro  baxter_base.gazebo.xacro  baxter_base.urdf.xacro  pedestal.xacro
src/baxter_moveit/baxter_moveit/worlds/: all_ycb.world  objs_6.world  objs_ycb.world  shelf-1_1.world  shelf.world  shelf2.world  shelf_more_obstacles.world  shelf_movable.world  table.world  table_pcam.world  tasks.world
src/baxter_planit/: CMakeLists.txt  package.xml  setup.py
src/baxter_planit/nodes/: baxter_planner
src/baxter_planit/scripts/: MCTS.py  Node.py  PHIA.py  PHIA_1st.py  PHIA_all.py  PHIA_gazebo.py  PHIM.py  PH_planning.py  Stick_Simulation.py  config.txt  delete_models.py  demo  demo_real  demo_simple  demo_table  demo_tasks  gen_trial  gen_trial_new  init_rand  plan.txt  position_the_arm.py  position_the_arm1.py  set_conf.py  setup_moveit_obstacles.py  spawn_basic.py  spawn_objects.py  stick.py  test.py
src/baxter_planit/scripts/Examples/: config.txt  example_1.txt  example_2.txt  example_6.txt  example_7.txt  example_8.txt  example_9.txt  s10.txt  s14.txt  s15.txt  s17.txt  s18.txt  s19.txt  s2.txt  s20.txt  s5.txt  s6.txt  s8.txt  simple_.txt  simple_1.txt  simple_3.txt  simple_4.txt  simple_5.txt  simple_6.txt  simple_7.txt  simple_8.txt  simple_9.txt
src/baxter_planit/scripts_old/: Connected_Comp.py  OOA.py  PHIA.py  PH_planning.py  demo_real  demo_tasks  gen_trial  position_the_arm.py  setup_moveit_obstacles.py  spawn_objects.py
src/baxter_planit/scripts_old/Examples/: basic.txt  basic1.txt  example_.txt  example_10.txt  example_3.txt  example_4.txt  example_5.txt  s1.txt  s11.txt  s12.txt  s13.txt  s16.txt  s3.txt  s4.txt  s7.txt  s9.txt  s_real.txt  simple_1.txt  simple_2.txt
src/baxter_planit/src/baxter_planit/: baxter_planner.py
src/gazebo_plugins/: CMakeLists.txt
src/planit/: CMakeLists.txt  package.xml  setup.py
src/planit/msg/: PercievedObject.msg
src/planit/scripts/: gazeboPerception.py  test
src/planit/src/planit/: __init__.py  grasps.py  perception.py  planner.py  utils.py
src/planit/srv/: PercieveObject.srv
src/real_baxter_planit/: CMakeLists.txt  package.xml  setup.py
src/real_baxter_planit/nodes/: real_baxter_planner
src/real_baxter_planit/scripts/: config.txt  demo_read_plan.py  demo_real  get_arm_position.py  grasp_simple.py  position_the_arm.py  test.py
src/real_baxter_planit/src/real_baxter_planit/: __init__.py  baxter_planner.py
(+253 files in other folders)
