<?xml version="1.0"?>
<package>
  <name>baxter_moveit</name>
  <version>1.1.1</version>
  <description>contains moveit configuration for baxter.</description>

  <maintainer email="who@where.com">someone</maintainer>
  <author>Some One</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/moveit_robots</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>baxter_ikfast_left_arm_plugin</run_depend>
  <run_depend>baxter_ikfast_right_arm_plugin</run_depend>
  <run_depend>baxter_moveit_config</run_depend>

  <export><metapackage/></export>
</package>
